# HexGameWinApi

./: CMakeLists.txt  README.md  src_for_build.sh
src/: GameState.cpp  GameState.hpp  PlayerState.cpp  PlayerState.hpp  common_structures.h  main.cpp
src/Controllers/: GameSettingController.cpp  GameSettingController.hpp  PlaygraundController.cpp  PlaygraundController.hpp
src/Libraries/: CMakeLists.txt  build_lib.sh  building_with_running_tests.sh
src/Libraries/src/: edge.hpp  graph.cpp  graph.hpp  graph_math.cpp  graph_math.hpp
src/Libraries/src/special_structures/: dsu.cpp  dsu.hpp  edge_neighbor.hpp
src/Libraries/tests/: CMakeLists.txt  tests_for_graph.cpp
